Cross browser compatibility fixes and refactoring.
Detected if user was clicking a select box in feedback form to prevent incorrect closing.
Minimal feedback button.
Modified box shadow on feedback related elements.
Image fallback for bar gradients.
Font fallbacks for elements using Bebas.
Explicit line height specificed for headers.
Cross browser compatibility fixes for tabs.
Extra padding for Share This stuff.

--- a/app/assets/stylesheets/albums.css.scss
+++ b/app/assets/stylesheets/albums.css.scss
@@ -1,5 +1,6 @@
 div#albums-header {
   height: 30px;
+  background-image: image-url("dark-gradient.png");
   background-color: #222;
   margin: 0px 15px;
   padding: 4px;
@@ -18,7 +19,7 @@ div#albums-header {
   span#album-header-info {
     float: left;
     overflow: hidden;
-    font-family: Bebas;
+    @include bebas;
     font-size: 16px;
     letter-spacing: 2px;
     margin: 3px;
