--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,11 +1,16 @@
-@import "youtube.css.scss";
-@import "photos.css.scss";
-@import "albums.css.scss";
+@mixin bebas {
+  font-family: Bebas, "Trebuchet MS", Helvetica, Charcoal, sans-serif;
+}
 
 @font-face {
 	font-family: Bebas;
 	src: url(/bebas.ttf);
 }
+
+@import "youtube.css.scss";
+@import "photos.css.scss";
+@import "albums.css.scss";
+@import "feedbacks.css.scss";
 
 @mixin image-right($width) {
   width: $width;
@@ -76,7 +81,6 @@ div#container {
     div#sidebar {
       float: left;
       width: $sidebar_width;
-      background: image-url("border-sidebar.png") no-repeat top left;
       min-height: 500px;
       padding: 50px 10px 0px 20px;
     }
@@ -92,10 +96,11 @@ div#container {
         padding: 44px 0px 0px 0px;
         margin-bottom: 15px;
         padding-right: 10px;
-        h2, h3 { font-family: Bebas; }
+        h2, h3 { @include bebas; }
         h2 {
           margin-bottom: 4px;
           font-size: 60px;
+          line-height: 80px;
           word-spacing: 10px;
         }
         h3 {
@@ -157,17 +162,27 @@ div#page-content {
 
   /* Tabs */
   .ui-tabs {
+    > div {
+      clear: both;
+    }
+
+    .ui-tabs-panel {
+      padding-top: 20px;
+    }
+
     .ui-tabs-hide {
       display: none;
     }
 
     .ui-tabs-nav {
-      margin: 0px 0px 20px 0px;
       padding: 0px;
-
       li.ui-state-default {
         list-style: none;
+        float: left;
+        margin: 3px;
+        display: block;
         display: inline-block;
+        max-width: 200px;
         padding: 10px 0px;
         background-color: #222;
         @include background-gradient(#333, #222);
@@ -191,8 +206,6 @@ div#page-content {
           }
         }
       }
-
-      clear: both;
     }
   }
 
@@ -206,7 +219,7 @@ ul#main-menu {
 
   li a, span {
     color: #ddd;
-    font-family: Bebas;
+    @include bebas;
     font-size: 25px;
     text-decoration: none;
     font-weight: 500;
@@ -281,6 +294,7 @@ div#bar {
   left: 0px;
   height: 20px;
   width: 100%;
+  background-image: image-url("dark-gradient.png");
   background-color: #222;
   @include background-gradient(#333, #222);
   @include box-shadow(inset 0 -1px 0 rgba(0, 0, 0, 0.1));
@@ -295,6 +309,7 @@ div#bar {
 }
 
 div#slide-down {
+  background: #000;
   background: rgba(0, 0, 0, 0.95);
   position: fixed;
   top: 20px;
@@ -320,7 +335,7 @@ div#slide-down {
 
       th {
         font-size: 40px;
-        font-family: Bebas;
+        @include bebas;
         color: #eee;
         text-align: left;
         padding-left: 5px;
@@ -388,41 +403,8 @@ div#lightbox {
   }
 }
 
-#feedback-button {
-  position: fixed;
-  bottom: 0px;
-  right: 0px;
-  background-color: #324F4F;
-  cursor: pointer;
-  @include box-shadow(-4px -4px 8px rgba(82, 168, 236, 0.3));
-  @include border-radius(5px 0px 0px 0px);
-  padding: 5px;
-  span {
-    a {
-      color: #fff;
-      text-decoration: none;
-      font-family: Bebas;
-      letter-spacing: 2px;
-    }
-  }
-}
-
 .hidden {
   display: none;
-}
-
-#feedback-form {
-  position: fixed;
-  padding: 15px;
-  @include box-shadow(-4px -4px 8px rgba(82, 168, 236, 0.3));
-  @include border-radius(5px 0px 0px 0px);
-  background-color: #fff;
-  bottom: 0px;
-  right: 0px;
-  width: 400px;
-  p, label, input, textarea, select {
-    margin: 10px;
-  }
 }
 
 @mixin field {
@@ -472,6 +454,7 @@ input[type="submit"] {
 
 #share-this-container {
   margin: 10px 0px;
+  padding-top: 20px;
   h4 {
     margin: 8px 0px;
   }
